Added connection string to mongodb in .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV=development
 PORT=5100
+MONGO_URL=mongodb+srv://shameenakoodan:secret123@cluster0.x6x3h9o.mongodb.net/jobify?retryWrites=true&w=majority
