Created the controller for the createJob

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV=development
 PORT=5100
+MONGO_URL=mongodb+srv://shameenakoodan:secret123@cluster0.nqybu5l.mongodb.net/JOBIFYß?retryWrites=true&w=majority
